# Proyecto-Mlops

./: .gitignore  README.md  diccionario_datos.md  main.py  presentacion_pitch.html  pyproject.toml
app/: main.py
data/processed/: nac2018_cleaned.csv
notebooks/: 01_limpieza_datos.ipynb  02_eda_processor.ipynb  03_modelado_ml.ipynb
scripts/: generate_notebooks.py  quick_train.py  write_readme.py
src/: __init__.py  preprocessing.py  train.py
