[project]
name = "proyecto-mlops"
version = "0.2.0"
description = "Predicción de riesgo perinatal: cesárea y bajo peso al nacer - DANE 2018"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "streamlit>=1.40.0",
]
